@@ -21,10 +21,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.conductoross.conductor.ai.document.DocumentLoader;
@@ -38,8 +36,10 @@ import org.conductoross.conductor.ai.model.LLMResponse;
 import org.conductoross.conductor.ai.model.ToolCall;
 import org.conductoross.conductor.ai.model.ToolSpec;
 import org.conductoross.conductor.ai.model.VideoGenRequest;
-import org.conductoross.conductor.common.JsonSchemaValidator;
+import org.conductoross.conductor.ai.recording.LLMCallRecorder;
 import org.conductoross.conductor.common.utils.StringTemplate;
+import org.conductoross.conductor.core.exception.SchemaValidationException;
+import org.conductoross.conductor.service.SchemaService;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.messages.Message;
@@ -68,8 +68,6 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.annotations.VisibleForTesting;
-import com.networknt.schema.JsonSchemaException;
-import com.networknt.schema.ValidationMessage;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import okhttp3.OkHttpClient;
@@ -90,22 +88,31 @@ public class LLMHelper {
             Map.of("end_turn", "STOP", "tool_use", "TOOL_CALLS", "refusal", "CONTENT_FILTER");
     private final ObjectMapper objectMapper = new ObjectMapperProvider().getObjectMapper();
 
-    private final JsonSchemaValidator jsonSchemaValidator;
+    private final SchemaService schemaService;
     private final List<DocumentLoader> documentLoaders;
     private final OkHttpClient httpClient;
+    private final LLMCallRecorder recorder;
 
-    public LLMHelper(
-            JsonSchemaValidator jsonSchemaValidator, List<DocumentLoader> documentLoaders) {
-        this(jsonSchemaValidator, documentLoaders, AIHttpClients.defaultClient());
+    public LLMHelper(SchemaService schemaService, List<DocumentLoader> documentLoaders) {
+        this(schemaService, documentLoaders, AIHttpClients.defaultClient());
     }
 
     public LLMHelper(
-            JsonSchemaValidator jsonSchemaValidator,
+            SchemaService schemaService,
             List<DocumentLoader> documentLoaders,
             OkHttpClient httpClient) {
-        this.jsonSchemaValidator = jsonSchemaValidator;
+        this(schemaService, documentLoaders, httpClient, null);
+    }
+
+    public LLMHelper(
+            SchemaService schemaService,
+            List<DocumentLoader> documentLoaders,
+            OkHttpClient httpClient,
+            LLMCallRecorder recorder) {
+        this.schemaService = schemaService;
         this.documentLoaders = documentLoaders;
         this.httpClient = httpClient;
+        this.recorder = recorder;
     }
 
     public LLMResponse chatComplete(
@@ -115,7 +122,10 @@ public class LLMHelper {
             String payloadStoreLocation,
             Consumer<TokenUsageLog> tokenUsageLogger) {
 
-        ChatModel chatModel = llm.getChatModel();
+        ChatModel chatModel = llm.getChatModel(chatCompletion);
+        if (recorder != null) {
+            chatModel = recorder.wrap(llm, chatCompletion, chatModel);
+        }
         ChatOptions chatOptions = llm.getChatOptions(chatCompletion);
         LLMResponse response = chatComplete(chatModel, chatOptions, chatCompletion);
 
@@ -255,22 +265,12 @@ public class LLMHelper {
                     String responseText = o.toString();
                     var responseObj = tryToConvertToJSON(responseText, input);
                     hasJsonOutput = true;
-                    if (input.getOutputSchema() != null) {
-                        String error = null;
-                        if (!(responseObj instanceof Map)) {
-                            error = "not a JSON response: %s".formatted(responseObj);
-                        } else {
-                            error =
-                                    validateJsonSchema(
-                                            input.getInputSchema(),
-                                            (Map<String, Object>) responseObj);
-                        }
-                        if (error != null) {
-                            errors.add(
-                                    String.format(
-                                            "Output does not confirm to the schema.  errors: %s",
-                                            error));
-                        }
+                    // tryToConvertToJSON already validated JSON content; this catches non-JSON.
+                    if (input.getOutputSchema() != null && !(responseObj instanceof Map)) {
+                        errors.add(
+                                "Output does not confirm to the schema.  errors: %s"
+                                        .formatted(
+                                                "not a JSON response: %s".formatted(responseObj)));
                     }
                     output.add(responseObj);
                 }
@@ -295,7 +295,7 @@ public class LLMHelper {
             }
             Map<String, Object> map = objectMapper.readValue(responseText, MAP_OF_STRING_TO_OBJ);
             if (chatCompletion.getOutputSchema() != null) {
-                String error = validateJsonSchema(chatCompletion.getInputSchema(), map);
+                String error = validateJsonSchema(chatCompletion.getOutputSchema(), map);
                 if (error != null) {
                     throw new RuntimeException(
                             String.format(
@@ -320,33 +320,13 @@ public class LLMHelper {
         }
     }
 
+    /** Validates data against schema; returns the error message or null on success. */
     private String validateJsonSchema(final SchemaDef schema, Map<String, Object> data) {
         try {
-            // Order in which we use the schema
-            // 1. If there is data -- inline schema def, we use that
-            // 2. Else use name + version to lookup
-            // 3. externalRef if present, in future we will use it -- currently not supported
-            String schemaContent = objectMapper.writeValueAsString(schema.getData());
-            if (schemaContent == null) {
-                return null;
-            }
-
-            Set<ValidationMessage> validationMessages =
-                    jsonSchemaValidator.validate(schemaContent, data);
-
-            if (validationMessages != null && !validationMessages.isEmpty()) {
-                return String.format(
-                        "Schema validation failed %s",
-                        validationMessages.stream()
-                                .map(ValidationMessage::getMessage)
-                                .collect(Collectors.joining(", ")));
-            }
+            schemaService.validate(schema, data);
             return null;
-        } catch (JsonSchemaException jpe) {
-            throw new RuntimeException(
-                    "Bad/Unsupported schema? : " + jpe.getValidationMessages().toString());
-        } catch (JsonProcessingException jpe) {
-            throw new RuntimeException("Error parsing the json schema : " + jpe.getMessage(), jpe);
+        } catch (SchemaValidationException e) {
+            return e.getMessage();
         }
     }
 
@@ -424,15 +404,17 @@ public class LLMHelper {
                 finishReason = result.getMetadata().getFinishReason();
             } else {
                 responses.add(result.getOutput().getText());
-                result.getOutput()
-                        .getMedia()
-                        .forEach(
-                                m ->
-                                        media.add(
-                                                org.conductoross.conductor.ai.model.Media.builder()
-                                                        .data(m.getDataAsByteArray())
-                                                        .mimeType(m.getMimeType().toString())
-                                                        .build()));
+                List<org.springframework.ai.content.Media> outputMedia =
+                        result.getOutput().getMedia();
+                if (outputMedia != null) {
+                    outputMedia.forEach(
+                            m ->
+                                    media.add(
+                                            org.conductoross.conductor.ai.model.Media.builder()
+                                                    .data(m.getDataAsByteArray())
+                                                    .mimeType(m.getMimeType().toString())
+                                                    .build()));
+                }
                 // storeMedia(outputLocation, result.getOutput().getMedia());
                 if (finishReason == null) {
                     finishReason = result.getMetadata().getFinishReason();
@@ -572,8 +554,16 @@ public class LLMHelper {
         }
     }
 
-    @SneakyThrows
     private Message constructMessage(ChatMessage chatMessage) {
+        Message message = constructMessageContent(chatMessage);
+        if (chatMessage.isLoopHistory()) {
+            message.getMetadata().put(ChatMessage.LOOP_HISTORY, true);
+        }
+        return message;
+    }
+
+    @SneakyThrows
+    private Message constructMessageContent(ChatMessage chatMessage) {
         return switch (chatMessage.getRole()) {
             case user -> getMessage(chatMessage);
             case assistant -> new AssistantMessage(chatMessage.getMessage());
@@ -672,11 +662,13 @@ public class LLMHelper {
     }
 
     private Message getMessage(ChatMessage msg) {
+        List<String> rawMedia = msg.getMedia();
         List<Media> media =
-                msg.getMedia().stream()
-                        .map(m -> getMedia(msg.getMimeType(), m))
-                        .filter(Objects::nonNull)
-                        .toList();
+                (rawMedia == null ? List.<String>of() : rawMedia)
+                        .stream()
+                                .map(m -> getMedia(msg.getMimeType(), m))
+                                .filter(Objects::nonNull)
+                                .toList();
         return UserMessage.builder().text(msg.getMessage()).media(media).build();
     }
 
@@ -705,6 +697,10 @@ public class LLMHelper {
 
     private void storeMedia(
             String location, List<org.conductoross.conductor.ai.model.Media> media) {
+
+        if (media == null || media.isEmpty()) {
+            return;
+        }
 
         DocumentLoader documentLoader =
                 documentLoaders.stream()
@@ -870,8 +866,7 @@ public class LLMHelper {
      *
      * @param messages The mutable list of messages to check and potentially modify
      */
-    @VisibleForTesting
-    void ensureLastMessageIsFromUser(List<Message> messages) {
+    public static void ensureLastMessageIsFromUser(List<Message> messages) {
         if (messages.isEmpty()) return;
         Message last = messages.getLast();
         if (last instanceof UserMessage) return;
@@ -888,10 +883,18 @@ public class LLMHelper {
                                     + partialText
                                     + "\n\nPlease continue where you left off."
                             : "Please continue where you left off.";
-            messages.add(new UserMessage(continuation));
+            messages.add(
+                    UserMessage.builder()
+                            .text(continuation)
+                            .metadata(assistantMsg.getMetadata())
+                            .build());
         } else {
             // For any other non-user message type (tool_call, system, etc.)
-            messages.add(new UserMessage("Please continue where you left off."));
+            messages.add(
+                    UserMessage.builder()
+                            .text("Please continue where you left off.")
+                            .metadata(last.getMetadata())
+                            .build());
         }
     }
 
